--- a/Mentorierte_Arbeit_Induktion_Rekursion/kapitel04.tex
+++ b/Mentorierte_Arbeit_Induktion_Rekursion/kapitel04.tex
@@ -132,6 +132,10 @@ Die Formel von Moivre-Binet enthält Terme, welche Computer aufgrund ihrer (nur)
 \end{align*}
 Die Fibonacci-Zahl $F_n$ unterscheidet sich von der Zahl $\textcolor{blue}{\frac{\varphi^n}{\sqrt{5}}}$ also lediglich um den Term $\textcolor{Green}{\frac{(1-\varphi)^n}{\sqrt{5}}}$. Doch wie gross ist dieser Term? Für den Exponenten $n=0$ reduziert er sich auf
 \begin{align*}
+    \abs{\frac{1}{\sqrt{5}}} < \frac{1}{2}.
+\end{align*}
+Für den Exponenten $n=1$ reduziert sich der Term auf
+\begin{align*}
     \abs{\frac{1-\varphi}{\sqrt{5}}}.
 \end{align*}
 Wegen $\abs{1-\varphi} < 1$ gilt
